# SF2565-assignment3

./: CMakeLists.txt  main.cpp
utilities/: curve.h  grid.h  point.h
